--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
   "minimum-stability": "dev",
   "type": "project",
   "require": {
-    "gonzaloner/trustspot-api-php": "dev-master"
+    "gonzaloner/trustspot-api-php": "0.2.*"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "5.2.*"
   },
   "autoload": {
     "psr-4": {
